--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no">
     <base target="_top">
-    <title>Investment </title>
+    <title>Project Builder</title>
     
     <!-- ส่วน icon สำหรับแท็บและ shortcut (ไม่แสดงในเนื้อหาของหน้าเว็บ) -->
-    <link rel="icon" type="image/png" href="https://s21-kling.klingai.com/bs2/upload-ylab-stunt-sgp/se/ai_portal_sgp_mmu_txt2img_aiweb_v15/117666b7-db2d-4a7e-95f6-550e6393030b_image.png?x-kcdn-pid=112372">
-    <link rel="apple-touch-icon" href="https://s21-kling.klingai.com/bs2/upload-ylab-stunt-sgp/se/ai_portal_sgp_mmu_txt2img_aiweb_v15/117666b7-db2d-4a7e-95f6-550e6393030b_image.png?x-kcdn-pid=112372">
+    <link rel="icon" type="image/png" href="https://s21-kling.klingai.com/bs2/upload-ylab-stunt-sgp/se/ai_portal_sgp_mmu_txt2img_aiweb_v15/43797c9d-cd0f-4636-869a-9b5216b36f3f_image.png?x-kcdn-pid=112372">
+    <link rel="apple-touch-icon" href="https://s21-kling.klingai.com/bs2/upload-ylab-stunt-sgp/se/ai_portal_sgp_mmu_txt2img_aiweb_v15/43797c9d-cd0f-4636-869a-9b5216b36f3f_image.png?x-kcdn-pid=112372">
     <link rel="manifest" href="manifest.json">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Trip-Planner">
